
* 1.23.3 - 
- BASIC: Implemented EXIT FOR, EXIT REPEAT and EXIT WHILE, based on the
  extensions in Richard Russell's BB4W, BBCSDL, BBCTTY and BBCZ80v5.
- BASIC: Implement == to be synonymous with = in comparisons. Another
  compatility follow from Richard Russell's BASICs.
- BASIC: Allow DIM var LOCAL -1 outside of FN/PROC (as per BB4W, BBCSDL,
  BBCTTY and BBCZ80v5).

* 1.23.2 - 22 May 2024
- General: Much code clean-up (and some bugs fixed) after static analysis.
- Build: Autodetect whether it's a release build (master branch, or a tarball
  without any git information) or a development build (anything else).
- System: Added a new version check. Use option "-nocheck" to skip this
  should it cause slow starts.
- System: Added support for a configuration file, in $HOME/.brandyrc,
  %APPDATA%\brandyrc or <Brandy$Dir>.brandyrc depending on platform.
  See docs/Config.txt for full details.
- System: Tune stack and recursion depth to allow for a flood fill of crosshatch
  in a 640x512 screen mode as the minimum stack size.
- System: Implemented SYS"OS_SetColour", apart from ECF and read colour.
- System: Implemented SYS"Brandy_MemSet" to provide quick initialisation of
  arbitrary memory blocks.
- Graphics: Fixed some breakage in flood fill. Also, allow it to terminate
  early instead of crashing the interpreter if stack is exhausted.
- MOS: *Refresh Off is now the same as *Refresh OnError.
- BASIC: IF something THEN REM is no longer handled as the start of a
  multi-line IF statement.
- BASIC: Unary minus (and plus) on arrays are now implemented.
- BASIC: Slight adjustment to TRACE VDU - 'TRACE VDU ON' now also works,
  and is functionally identical to 'TRACE VDU'.
- BASIC: EXT#handle%=length%% is now supported.
- BASIC: PTR#handle% and EXT#handle% now accept and can return 64-bit values
  for working with large files.
- BASIC: PRINT was garbling numeric output when left-justified on some
  platforms (notably RISC OS).

* 1.23.1 - 13 April 2024